--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "with-tailwindcss",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "devDependencies": {
-    "postcss-flexbugs-fixes": "4.2.1",
-    "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.7.4"
-  },
-  "license": "MIT"
+    "name": "with-tailwindcss",
+    "version": "1.0.0",
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@tailwindcss/typography": "^0.2.0",
+        "gray-matter": "^4.0.2",
+        "next": "latest",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "remark-gfm": "^1.0.0",
+        "remark-html": "^13.0.1",
+        "remark-parse": "^9.0.0",
+        "unified": "^9.2.0"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.6",
+        "@types/react": "^16.9.55",
+        "postcss-flexbugs-fixes": "4.2.1",
+        "postcss-preset-env": "^6.7.0",
+        "tailwindcss": "^1.7.4",
+        "typescript": "^4.0.5"
+    },
+    "license": "MIT"
 }
