--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@tailwindcss/typography": "^0.2.0",
         "gray-matter": "^4.0.2",
         "next": "latest",
+        "prismjs": "^1.22.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "remark-gfm": "^1.0.0",
@@ -19,7 +20,9 @@
     },
     "devDependencies": {
         "@types/node": "^14.14.6",
+        "@types/prismjs": "^1.16.2",
         "@types/react": "^16.9.55",
+        "babel-plugin-prismjs": "^2.0.1",
         "postcss-flexbugs-fixes": "4.2.1",
         "postcss-preset-env": "^6.7.0",
         "tailwindcss": "^1.7.4",
